# Eindfeest

./: README.md  pyproject.toml
src/solar/controller/: arduino_device.py
src/solar/model/: solar_experiment.py
src/solar/sims/: sim_pyvisa.py
src/solar/view/: gui.py  gui_V2.py
test/: model_test.py  pyvisa_sim_test.py  test.py
