[tool.poetry]
name = "solar"
version = "0.1.0"
description = ""
authors = ["vkpha <149399516+vkpha@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
nsp2visasim = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
