[tool.poetry]
name = "solar"
version = "0.1.0"
description = ""
authors = ["vkpha <149399516+vkpha@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
pyvisa-py = "^0.7.1"
numpy = "^1.26.2"
pyside6 = "^6.6.1"
pyqtgraph = "^0.13.3"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
rich = "^13.7.0"


[tool.poetry.group.dev.dependencies]
nsp2visasim = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "solar.view.gui:main"
